--- a/webInterface/login01.html
+++ b/webInterface/login01.html
@@ -20,12 +20,17 @@
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
+
             <h1>Login</h1>
             <form action="login02.php">
                 <label for="email" class="lab">Email</label><br>
-                <input type="text" name="email" class="inp">
+                <input type="text" name="email" class="inp" placeholder="Insira seu email">
+
                 <label for="nome"  class="lab">Senha</label><br>
-                <input type="text" name="Senha" class="inp">
+                <input type="password" name="Senha" class="inp" id="pwd" placeholder="Insira sua senha">
+                
+                <button id="showPwd" type="button" onclick="show()">Mostrar senha</button><br>
+
                 <input type="submit" value="ENTRAR" id="sub">
             </form>
         </div>
